--- a/templates/xhtml1-strict.html
+++ b/templates/xhtml1-strict.html
@@ -20,7 +20,8 @@
 	<link rel="stylesheet" type="text/css" href="/media/css/style.css"></link>
 	<link rel="stylesheet" type="text/css" href="/media/css/layout.css"></link>
 	<link rel="stylesheet" type="text/css" href="/media/css/nav.css"></link>
-	<link rel="stylesheet" type="text/css" href="/media/css/titan2x.css"></link>
+	<link rel="stylesheet" type="text/css" href="/media/css/bashoneliners.css"></link>
+
 	{% block css %}{% endblock %}
 	{% block custom_css %}{% endblock %}
 	
