--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,15 @@
 {% block body %}
 
 <div id="nav">
-    <a href="/">home</a> ;
-    <a href="#">rules</a> ;
-    <a href="#">post</a>
+    <a href="/"><span>home</span></a> ;
+    <a href="#"><span>rules</span></a> ;
+    <a href="#"><span>login</span></a> ;
+    <a href="#"><span>post</span></a>
     <br/>
-    <a href="#">top 50</a> ;
-    <a href="#">random</a> ;
-    <a href="#">search</a>
+    <a href="#"><span>top 50</span></a> ;
+    <a href="#"><span>latest 50</span></a> ;
+    <a href="#"><span>random</span></a> ;
+    <a href="#"><span>search</span></a>
 </div>
 
 <div class="hr"></div>
