--- a/templates/base.html
+++ b/templates/base.html
@@ -12,14 +12,14 @@
 
 <div id="nav">
     <a href="/"><span>home</span></a> ;
-    <a href="#"><span>rules</span></a> ;
-    <a href="#"><span>login</span></a> ;
-    <a href="#"><span>post</span></a>
+    <a class="comingsoon" href="#"><span>rules</span></a> ;
+    <a class="comingsoon" href="#"><span>login</span></a> ;
+    <a class="comingsoon" href="#"><span>post</span></a>
     <br/>
-    <a href="#"><span>top 50</span></a> ;
-    <a href="#"><span>latest 50</span></a> ;
-    <a href="#"><span>random</span></a> ;
-    <a href="#"><span>search</span></a>
+    <a class="comingsoon" href="#"><span>top 50</span></a> ;
+    <a href="."><span>latest 50</span></a> ;
+    <a class="comingsoon" href="#"><span>random</span></a> ;
+    <a class="comingsoon" href="#"><span>search</span></a>
 </div>
 
 <div class="hr"></div>
