--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,13 @@
 {% block javascript %}
 {% endblock javascript %}
 
-{% block title %}{% endblock %}
+{% block title %}bashoneliners.com{% endblock %}
 
 {% block body %}
 
 <div id="nav">
     <a href="/"><span>home</span></a> ;
-    <a class="comingsoon" href="#"><span>rules</span></a> ;
+    <a href="/main/rules"><span>rules</span></a> ;
     <a class="comingsoon" href="#"><span>login</span></a> ;
     <a class="comingsoon" href="#"><span>post</span></a>
     <br/>
