--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -21,7 +21,7 @@ We are in a very very early stage of development but we will progress rapidly.
     <li>Comment on a oneliner. Members will be able to comment on oneliners and make suggestions.</li>
 </ul>
 
-<p>At the moment we are trying to define the posting rules, <a href="/main/rules/">see the rules page</a>.</p>
+<p>If you would like to participate in the development or if you would like an early member access to contribute oneliners, please let us know!</p>
 
 <h2>latest 50</h2>
 
