--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <a class="comingsoon" href="#"><span>post</span></a>
     <br/>
     <a class="comingsoon" href="#"><span>top 50</span></a> ;
-    <a href="."><span>latest 50</span></a> ;
+    <a href="/"><span>latest 50</span></a> ;
     <a class="comingsoon" href="#"><span>random</span></a> ;
     <a class="comingsoon" href="#"><span>search</span></a>
 </div>
