added very basic nst

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <div id="nav">
     <a href="/"><span>home</span></a> ;
     <a href="/main/rules"><span>rules</span></a> ;
-    <a class="comingsoon" href="#"><span>login</span></a> ;
+    <a class="comingsoon" href="#"><span>login / sign up</span></a> ;
     <a class="comingsoon" href="#"><span>post</span></a>
     <br/>
     <a class="comingsoon" href="#"><span>top 50</span></a> ;
