--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -69,5 +69,26 @@ code {
     text-align: center;
 }
 
+form .error {
+    color: red;
+}
+
+form ul {
+    list-style: none;
+}
+
+form ul li {
+    padding: 0;
+    margin: 0;
+}
+
+form ul li label {
+    font-weight: bold;
+}
+
+form ul li input {
+    margin: 1em;
+}
+
 
 /* eof */
