--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,11 @@
     <a href="/"><span>home</span></a> ;
     <a href="/main/rules"><span>rules</span></a> ;
     {% if user.is_authenticated %}
-    <a class="comingsoon" href="#"><span>profile</span></a> ;
+    <a class="comingsoon" href="/accounts/profile/"><span>profile</span></a> ;
     <a class="comingsoon" href="#"><span>post a one-liner</span></a> ;
-    <a class="comingsoon" href="#"><span>logout</span></a>
+    <a href="/accounts/logout/"><span>logout</span></a>
     {% else %}
-    <a class="comingsoon" href="#"><span>login / sign up</span></a>
+    <a href="/accounts/login/"><span>login / sign up</span></a>
     {% endif %}
     <br/>
     <a class="comingsoon" href="#"><span>top 50</span></a> ;
