--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <a href="/main/rules"><span>rules</span></a> ;
     {% if user.is_authenticated %}
     <a class="comingsoon" href="/accounts/profile/"><span>profile</span></a> ;
-    <a class="comingsoon" href="#"><span>post a one-liner</span></a> ;
+    <a href="/main/post"><span>post a one-liner</span></a> ;
     <a href="/accounts/logout/"><span>logout</span></a>
     {% else %}
     <a href="/accounts/login/"><span>login / sign up</span></a>
