--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -29,6 +29,14 @@ We are in a very very early stage of development but we will progress rapidly.
 
 {% for oneliner in oneliners %}
 <div class="oneliner">
+    <p class="author">
+	@<span>{{ oneliner.hacker.username }}</span> 
+	on <span>{{ oneliner.created_dt }}</span>
+	#
+	{{ oneliner.get_votes_up }} <img src="/media/icons/thumbsup.png"/>
+	{{ oneliner.get_votes_down }} <img src="/media/icons/thumbsdown.png"/>
+    </p>
+
     <pre>{% for line in oneliner.lines %}$ {{ line }}<br/>{% endfor %}</pre>
 
     <div class="summary">
