--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <a href="/accounts/login/"><span>login / sign up</span></a>
     {% endif %}
     <br/>
-    <a class="comingsoon" href="#"><span>top 50</span></a> ;
+    <a href="/main/top/50/"><span>top 50</span></a> ;
     <a href="/"><span>latest 50</span></a> ;
     <a class="comingsoon" href="#"><span>random</span></a> ;
     <a class="comingsoon" href="#"><span>search</span></a>
