updated list of features

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -18,7 +18,12 @@ We are in a very very early stage of development but we will progress rapidly.
 <h3>Features in the making</h3>
 
 <ul>
-    <li>Create account, login. Members will be able to post oneliners.</li>
+    <li><strike>Create account, login. Members will be able to post oneliners.</strike>
+    <ul>
+	<li>Improve the ugly interface.</li>
+	<li>Profile page for logged in members with list of own posts and other goodies.</li>
+    </ul>
+    </li>
     <li>Vote on a oneliner. Members will be able to vote up or down a oneliner.</li>
     <li>Comment on a oneliner. Members will be able to comment on oneliners and make suggestions.</li>
 </ul>
