--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
     <br/>
     <a href="/main/top/50/"><span>top 50</span></a> ;
     <a href="/"><span>latest 50</span></a> ;
-    <a class="comingsoon" href="#"><span>random</span></a> ;
-    <a class="comingsoon" href="#"><span>search</span></a>
+    <a class="comingsoon" href="#"><span>random</span></a>
 </div>
 
 <div class="hr"></div>
