removed random, because its quite pointless

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,7 @@
     {% endif %}
     <br/>
     <a href="/main/top/50/"><span>top 50</span></a> ;
-    <a href="/"><span>latest 50</span></a> ;
-    <a class="comingsoon" href="#"><span>random</span></a>
+    <a href="/"><span>latest 50</span></a>
 </div>
 
 <div class="hr"></div>
