re-phrased oneliner as one-liner in all site texts

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -11,24 +11,24 @@
 {% block content %}
 
 <p>
-O hi, we aim to collect here <strong>*good*</strong> bash/ksh oneliners.
+O hi, we aim to collect here <strong>*good*</strong> bash/ksh one-liners.
 We are in a very very early stage of development but we will progress rapidly.
 </p>
 
 <h3>Features in the making</h3>
 
 <ul>
-    <li><strike>Create account, login. Members will be able to post oneliners.</strike>
+    <li><strike>Create account, login. Members will be able to post one-liners.</strike>
     <ul>
 	<li>Improve the ugly interface.</li>
 	<li>Profile page for logged in members with list of own posts and other goodies.</li>
     </ul>
     </li>
-    <li>Vote on a oneliner. Members will be able to vote up or down a oneliner.</li>
-    <li>Comment on a oneliner. Members will be able to comment on oneliners and make suggestions.</li>
+    <li>Vote on a one-liner. Members will be able to vote up or down a one-liner.</li>
+    <li>Comment on a one-liner. Members will be able to comment on one-liners and make suggestions.</li>
 </ul>
 
-<p>If you would like to participate in the development or if you would like an early member access to contribute oneliners, please let us know!</p>
+<p>If you would like to participate in the development or if you would like an early member access to contribute one-liners, please let us know!</p>
 
 <h2>latest 50</h2>
 
