--- a/templates/main/rules.html
+++ b/templates/main/rules.html
@@ -8,9 +8,9 @@
 
 {% block content %}
 
-<p>A <em>oneliner</em> is a sequence of commands that does something useful, interesting, in just one line!</p>
+<p>A <em>one-liner</em> is a sequence of commands that does something useful, interesting, in just one line!</p>
 
-<h3>A *good* oneliner is ...</h3>
+<h3>A *good* one-liner is ...</h3>
 
 <ul>
     <li>Useful, practical for someone using bash, ksh family of shells.</li>
@@ -18,9 +18,9 @@
     <li>Something very interesting or cool.</li>
 </ul>
 
-<p>If you know a *good* oneliner, please do not hesitate to post and share with everyone!</p>
+<p>If you know a *good* one-liner, please do not hesitate to post and share with everyone!</p>
 
-<h3>Do NOT post a oneliner if ...</h3>
+<h3>Do NOT post a one-liner if ...</h3>
 
 <ul>
     <li>... it is too complicated and hard to read.</li>
