--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -14,7 +14,7 @@
     <pre>{% for line in oneliner.lines %}$ {{ line }}<br/>{% endfor %}</pre>
 
     <div class="summary">
-	{{ oneliner.summary }}
+	{{ oneliner.summary|nst|safe }}
     </div>
 
     {% if oneliner.explanation %}
