--- a/templates/base.html
+++ b/templates/base.html
@@ -11,30 +11,31 @@
 {% block body %}
 
 <div id="nav">
-    <a href="/"><span>home</span></a> ;
-    <a href="/main/rules"><span>rules</span></a> ;
     {% if user.is_authenticated %}
-    <a class="comingsoon" href="/accounts/profile/"><span><img src="/media/icons/user.png"/>{{ user.username }}</span></a> ;
+    <a class="comingsoon" href="/accounts/profile/"><span>{{ user.username }}</span></a> ;
     <a href="/main/post"><span>post a one-liner</span></a> ;
     <a href="/accounts/logout/"><span>logout</span></a>
     {% else %}
     <a href="/accounts/login/"><span>login / sign up</span></a>
     {% endif %}
     <br/>
+    <a href="/"><span>home</span></a> ;
+    <a href="/main/rules"><span>rules</span></a> ;
     <!--
     <a href="/main/top/50/"><span>top 50</span></a> ;
     -->
-    <a href="/"><span>latest 50</span></a>
+    <a href="/"><span>latest 50</span></a> ;
+    <a class="comingsoon" href="#"><span>Search</span></a>
 </div>
 
 <div class="hr"></div>
 
-<div id="content">
+<div class="floatright plus1">
+    {% include 'facebook.html' %}
+    {% include 'plusone.html' %}
+</div>
 
-    <div class="floatright plus1">
-	{% include 'facebook.html' %}
-	{% include 'plusone.html' %}
-    </div>
+<div id="content">
 
     <h2>{% block pagetitle %}{% endblock %}</h2>
 
