added vote and favourite buttons

--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -11,27 +11,41 @@
 	-->
     </p>
 
-    <pre>{% for line in oneliner.lines %}$ {{ line }}<br/>{% endfor %}</pre>
+    <table class="oneliner">
+	<tr>
+	    <td class="votecell">
+		<div class="vote">
+		    <a class="vote-up-off" title="Cool one-liner! I can use this! (click again to undo)">vote up</a>
+		    <span class="vote-count">0</span>
+		    <a class="vote-down-off" title="Not cool. I cannot use this! (click again to undo)">vote down</a>
+		    <a class="star-off" title="This is a favourite one-liner. (click again to undo)">favourite</a>
+		</div>
+	    </td>
+	    <td>
+		<pre>{% for line in oneliner.lines %}$ {{ line }}<br/>{% endfor %}</pre>
 
-    <div class="summary">
-	{{ oneliner.summary|nst|safe }}
-    </div>
+		<div class="summary">
+		    {{ oneliner.summary|nst|safe }}
+		</div>
 
-    {% if oneliner.explanation %}
-    <div class="explanation">
-	<h3>Explanation</h3>
-	{{ oneliner.explanation|nst|safe }}
-    </div>
-    {% endif %}
+		{% if oneliner.explanation %}
+		<div class="explanation">
+		    <h3>Explanation</h3>
+		    {{ oneliner.explanation|nst|safe }}
+		</div>
+		{% endif %}
 
-    {% if oneliner.caveats %}
-    <div class="caveats">
-	<h3>Caveats</h3>
-	{{ oneliner.caveats|nst|safe }}
-    </div>
-    {% endif %}
+		{% if oneliner.caveats %}
+		<div class="caveats">
+		    <h3>Caveats</h3>
+		    {{ oneliner.caveats|nst|safe }}
+		</div>
+		{% endif %}
 
-    <div class="eof">### EOF ###</div>
+		<div class="eof">### EOF ###</div>
+	    </td>
+	</tr>
+    </table>
 </div>
 {% endfor %}
 
