added back top 50 link disabled

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <br/>
     <a href="/"><span>home</span></a> ;
     <a href="/main/rules"><span>rules</span></a> ;
+    <a class="comingsoon" href="#"><span>top 50</span></a> ;
     <!--
     <a href="/main/top/50/"><span>top 50</span></a> ;
     -->
