adjusted text on front page

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,10 +10,9 @@
 
 {% block content %}
 
-<p>
-O hi, we aim to collect here <strong>*good*</strong> bash/ksh one-liners.
-We are in a very very early stage of development but we will progress rapidly.
-</p>
+<p>Welcome to <strong>bashoneliners.com</strong>, a place to share Bash/ksh one-liners with the world.</p>
+<p>We are in a very very early stage of development but we intend to complete the site very soon.</p>
+
 
 <h3>Features in the making</h3>
 
@@ -28,7 +27,7 @@ We are in a very very early stage of development but we will progress rapidly.
     <li>Comment on a one-liner. Members will be able to comment on one-liners and make suggestions.</li>
 </ul>
 
-<p>If you would like to participate in the development or if you would like an early member access to contribute one-liners, please let us know!</p>
+<p>If you would like to participate in the development please let us know!</p>
 
 <h2>latest 50</h2>
 
