--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,24 +10,25 @@
 
 {% block content %}
 
-<p>Welcome to <strong>bashoneliners.com</strong>, a place to share Bash/ksh one-liners with the world.</p>
-<p>We are in a very very early stage of development but we intend to complete the site very soon.</p>
+<p>Welcome to <strong>bashoneliners.com</strong>, a place for practical, clever, or interesting Bash/Ksh <em>one-liners</em>, tips, short script snippets. 
+You can post your own one-liner and share with the world!</p>
+
+<p class="warning">
+This site is currently very much BETA. 
+Even so, everything you see should work. But, it's true there's not much to see yet.
+If you would like to participate in this project, have a look at our <a href="{% url bashoneliners.main.views.mission %}">mission statement</a>.
+</p>
 
 
-<h3>Features in the making</h3>
+<h3>Next features in the making</h3>
 
 <ul>
-    <li><strike>Create account, login. Members will be able to post one-liners.</strike>
-    <ul>
-	<li>Improve the ugly interface.</li>
-	<li>Profile page for logged in members with list of own posts and other goodies.</li>
-    </ul>
+    <li>Profile page for logged in members with list of own posts and other goodies.</li>
     </li>
     <li>Vote on a one-liner. Members will be able to vote up or down a one-liner.</li>
     <li>Comment on a one-liner. Members will be able to comment on one-liners and make suggestions.</li>
+    <li>Improve the ugly interface.</li>
 </ul>
-
-<p>If you would like to participate in the development please let us know!</p>
 
 <h2>latest 50</h2>
 
