--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     {% endif %}
     <br/>
     <a href="/"><span>home</span></a> ;
+    <a href="/main/mission"><span>mission</span></a> ;
     <a href="/main/rules"><span>rules</span></a> ;
     <a class="comingsoon" href="#"><span>top 50</span></a> ;
     <!--
