--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<dl>
+<dl class="mission">
     <dt>MISSION</dt>
     <dd>Create a collection of practical or just pure awesome(!) bash or ksh <em>one-liners</em> or tips, with easy to use user interfaces for browsing, searching and contributing one-liners.
     </dd>
