changed Caveats to Limitations

--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -45,7 +45,7 @@
 	    </div>
 	    </dd>
 
-	    <dt>Caveats (if any)</dt>
+	    <dt>Limitations (if any)</dt>
 	    <dd>
 	    <div class="error">{{ form.caveats.errors }}</div>
 	    <div class="caveats">
