added meta info for index.html

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -4,9 +4,9 @@
 
 {% block pagetitle %}bashoneliners.com{% endblock %}
 
-{% block keywords %}{% endblock %}
+{% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, linux, unix, vote, rank, rss, open-source, django, python, bazaar, launchpad, collaborate{% endblock %}
 
-{% block description %}{% endblock %}
+{% block description %}A collection of practical or just pure awesome(!) bash or ksh one-liners or tips, with easy to use user interfaces for browsing, searching and contributing one-liners. {% endblock %}
 
 {% block content %}
 
