--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -178,6 +178,10 @@ td.votecell .vote-count {
     color: red;
 }
 
+.message {
+    font-style: italic;
+}
+
 dl.mission dt {
     font-variant: small-caps;
     text-transform: uppercase;
