--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <div id="nav">
     {% if user.is_authenticated %}
-    <a class="comingsoon" href="/accounts/profile/"><span>{{ user.username }}</span></a> ;
+    <a href="/main/profile/"><span>{{ user.username }}</span></a> ;
     <a href="/main/post"><span>post a one-liner</span></a> ;
     <a href="/accounts/logout/"><span>logout</span></a>
     {% else %}
