--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -15,7 +15,7 @@
 	    </td>
 	    <td>
 		<div class="summary">
-		    {{ oneliner.summary }}
+		    {{ oneliner.summary|capfirst }}
 		</div>
 
 		<p class="author">
