--- a/templates/base.html
+++ b/templates/base.html
@@ -12,20 +12,20 @@
 
 <div id="nav">
     {% if user.is_authenticated %}
-    <a href="/main/profile/"><span>{{ user.username }}</span></a> ;
-    <a href="/main/post"><span>post a one-liner</span></a> ;
-    <a href="/accounts/logout/"><span>logout</span></a>
+    <a href="{% url bashoneliners.main.views.profile %}"><span>{{ user.username }}</span></a> ;
+    <a href="{% url bashoneliners.main.views.post %}"><span>post a one-liner</span></a> ;
+    <a href="{% url django.contrib.auth.views.logout %}"><span>logout</span></a>
     {% else %}
-    <a href="/accounts/login/"><span>login / sign up</span></a>
+    <a href="{% url django.contrib.auth.views.login %}"><span>login / sign up</span></a>
     {% endif %}
     <br/>
-    <a href="/"><span>home</span></a> ;
-    <a href="/main/mission"><span>mission</span></a> ;
+    <a href="{% url bashoneliners.main.views.index %}"><span>home</span></a> ;
+    <a href="{% url bashoneliners.main.views.mission %}"><span>mission</span></a> ;
     <a class="comingsoon" href="#"><span>top 50</span></a> ;
     <!--
     <a href="/main/top/50/"><span>top 50</span></a> ;
     -->
-    <a href="/"><span>latest 50</span></a> ;
+    <a href="{% url bashoneliners.main.views.index %}"><span>latest 50</span></a> ;
     <a class="comingsoon" href="#"><span>Search</span></a>
 </div>
 
