skip social buttons when called from w3c validator

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,12 @@
 
 <div class="hr"></div>
 
+{% if not w3c %}
 <div class="floatright plus1">
     {% include 'facebook.html' %}
     {% include 'plusone.html' %}
 </div>
+{% endif %}
 
 <div id="content">
 
