added link to task management page and bzr branch command example on mission page

--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -34,17 +34,19 @@
 
 <p>If you would like to participate, please contact us at <a href="mailto:info@titan2x.com">info@titan2x.com</a> and let's start the conversation!</p>
 
-<h3>The TODO list (upcoming features)</h3>
+<dl>
+    <dt>Get the source code</dt>
+    <dd>
+	<a href="https://code.launchpad.net/bashoneliners">https://code.launchpad.net/bashoneliners</a>
+	<pre>bzr branch lp:bashoneliners</pre>
+    </dd>
 
-<ul>
-    <li>Improved profile page, edit own one-liners</li>
-    <li>Search</li>
-    <li>RSS</li>
-    <li>Voting</li>
-    <li>TOP 50</li>
-    <li>Nice text editor like on Stack Exchange</li>
-    <li>Commenting</li>
-    <li>Logo, design</li>
-</ul>
+    <dt>Task management, upcoming features</dt>
+    <dd>
+	<a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
+    </dd>
+
+</dl>
+
 
 {% endblock %}
