added git and Subversion checkout options

--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -37,8 +37,22 @@
 <dl>
     <dt>Get the source code</dt>
     <dd>
-	<a href="https://code.launchpad.net/bashoneliners">https://code.launchpad.net/bashoneliners</a>
-	<pre>bzr branch lp:bashoneliners</pre>
+	<dl>
+	    <dt>Bazaar (primary)</dt>
+	    <dd>
+		<pre>bzr branch lp:bashoneliners</pre>
+	    </dd>
+
+	    <dt>Git (read-only mirror)</dt>
+	    <dd>
+		<pre>git clone git@github.com:titan2x/bashoneliners.git</pre>
+	    </dd>
+
+	    <dt>Subversion (read-only mirror)</dt>
+	    <dd>
+		<pre>svn checkout http://bashoneliners.googlecode.com/svn/trunk/</pre>
+	    </dd>
+	</dl>
     </dd>
 
     <dt>Task management, upcoming features</dt>
