changed email addresses to info@bashoneliners.com

--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -32,7 +32,7 @@
 <p>This is an open-source project, you can find the source code on the project management website:</p>
 <p><a href="https://launchpad.net/bashoneliners">https://launchpad.net/bashoneliners</a></p>
 
-<p>If you would like to participate, please contact us at <a href="mailto:info@titan2x.com">info@titan2x.com</a> and let's start the conversation!</p>
+<p>If you would like to participate, please contact us at <a href="mailto:info@bashoneliners.com">info@bashoneliners.com</a> and let's start the conversation!</p>
 
 <dl>
     <dt>Get the source code</dt>
