--- a/templates/xhtml1-strict.html
+++ b/templates/xhtml1-strict.html
@@ -4,8 +4,8 @@
 	<title>{% block title %}{% endblock %}</title>
 
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-	<meta name="author" content="Janos Gyerik info@titan2x.com" />
-	<meta name="copyright" content="Janos Gyerik info@titan2x.com" />
+	<meta name="author" content="Janos Gyerik info@bashoneliners.com" />
+	<meta name="copyright" content="Janos Gyerik info@bashoneliners.com" />
 	<meta name="keywords" content="{% block keywords %}{% endblock %}" />
 	<meta name="description" content="{% block description %}{% endblock %}" />
 
