--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -13,7 +13,7 @@
 <p>Make sure your one-liner is:</p>
 
 <ul>
-    <li>Practical, cleaver, or interesting to someone using bash or ksh.</li>
+    <li>Practical, clever, or interesting to someone using bash or ksh.</li>
     <li>Short, clear, easy to understand.</li>
     <li>Something very interesting or cool.</li>
 </ul>
